--- a/client/src/app/styles/index.scss
+++ b/client/src/app/styles/index.scss
@@ -12,9 +12,9 @@ body {
 }
 
 .app_desktop {
-    min-width: 1440px;
+    min-width: 1420px;
     position: relative;
-    background: var(--white);
+    background: var(--black-opacity);
 }
 
 .app_mobile {
