--- a/client/src/app/styles/variables/global.scss
+++ b/client/src/app/styles/variables/global.scss
@@ -158,8 +158,7 @@
     // -------------------------------- OTHERS -------------------------------------------------
 
     // Размеры
-    --header-main-panel-height: 70px;
-    --header-smallscreen-height: 96px;
+    --header-desktop-height: 150px;
     --header-mobile-height: 60px;
 
     // z - Индексы
