--- a/client/src/widgets/Header/ui/DesktopView/HeaderDesktop/HeaderDesktop.module.scss
+++ b/client/src/widgets/Header/ui/DesktopView/HeaderDesktop/HeaderDesktop.module.scss
@@ -1,3 +1,11 @@
 .HeaderDesktop {
+    height: var(--header-desktop-height);
+    display: flex;
+    padding-inline: 55px;
+    background: transparent;
+}
 
+
+.btns {
+    margin-left: auto;
 }
