--- a/client/src/shared/ui/AppLink/AppLink.module.scss
+++ b/client/src/shared/ui/AppLink/AppLink.module.scss
@@ -1,8 +1,15 @@
 .AppLink {
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 5px
 }
 
 .white {
     color: var(--white4);
     font: var(--font-menu-desktop);
+    transition: opacity 0.2s ease-in;
+    &:hover {
+        opacity: 0.6;
+    }
 }
