--- a/client/src/shared/ui/Icon/Icon.module.scss
+++ b/client/src/shared/ui/Icon/Icon.module.scss
@@ -1,3 +1,11 @@
 .Icon {
 
 }
+
+.clean {
+    transition: opacity 0.2s ease-in;
+    cursor: pointer;
+    &:hover {
+        opacity: 0.6;
+    }
+}
