--- a/client/src/shared/ui/Text/Text.module.scss
+++ b/client/src/shared/ui/Text/Text.module.scss
@@ -140,102 +140,7 @@
     font: var(--font-body-mini-mobile);
 }
 
-
-
-
-.blue {
-    color: var(--blue);
-}
-
-.blue_grey {
-    color: var(--blue-grey);
-}
-
 .white {
-    color: var(--white);
+    color: var(--white4);
 }
 
-.dark {
-    color: var(--dark);
-}
-
-.grey_dark {
-    color: var(--grey-dark);
-}
-
-.black {
-    color: var(--black);
-}
-
-.red {
-    color: var(--red-error);
-}
-
-.grey_light {
-    color: var(--grey-light);
-}
-
-.grey {
-    color: var(--grey);
-}
-
-.blue_light2 {
-    color: var(--blue-light2);
-}
-
-.blue_light {
-    color: var(--blue-light);
-}
-
-.borderBottom {
-    content: '';
-    height: 1px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    transition: all 0.3s ease-out;
-}
-
-.navigator_underline_light {
-    color: var(--white);
-    padding: 10px;
-    position: relative;
-    cursor: pointer;
-    .borderBottom {
-        background: var(--white);
-    }
-    &:hover {
-        .borderBottom {
-            opacity: 1;
-        }
-    }
-}
-
-.navigator_underline_dark {
-    color: var(--dark);
-    padding: 10px;
-    position: relative;
-    cursor: pointer;
-    .borderBottom {
-        background: var(--blue);
-    }
-    &:hover {
-        .borderBottom {
-            opacity: 1;
-        }
-    }
-}
-
-.opacity80 {
-    opacity: 0.8;
-}
-
-.opacity70 {
-    opacity: 0.7;
-}
-
-.opacity60 {
-    opacity: 0.6;
-}
