added content in mainPage, added slider, image, changed mapping for stack, card

--- a/client/src/app/styles/index.scss
+++ b/client/src/app/styles/index.scss
@@ -14,7 +14,7 @@ body {
 .app_desktop {
     min-width: 1420px;
     position: relative;
-    background: var(--black-opacity);
+    background: var(--white);
 }
 
 .app_mobile {
@@ -34,3 +34,4 @@ body {
 .is-loading-body {
     overflow-y: hidden;
 }
+
