--- a/client/src/app/styles/themes/normal.scss
+++ b/client/src/app/styles/themes/normal.scss
@@ -4,7 +4,7 @@
     --black: #292E33;
     --grey-light: #EFF1F2;
     --dark: #293A47;
-    --dark2: #233340;
+    --dark2: #202e3a;
     --grey: #A6ADB2;
     --grey-light2: #DAE0E5;
     --grey2: #A1AAB2;
