--- a/client/src/shared/ui/Dropdown/Dropdown.module.scss
+++ b/client/src/shared/ui/Dropdown/Dropdown.module.scss
@@ -27,7 +27,6 @@
 .list {
     display: flex;
     flex-direction: column;
-    gap: 15px;
     padding-left: 5px;
 }
 
@@ -43,17 +42,22 @@
 
 .itemMenu {
     display: flex;
+    cursor: pointer;
+    padding-block: 10px;
+    border-radius: 20px;
+    padding-inline: 15px;
+    &:hover {
+        .underline {
+            width: 100%;
+        }
+        backdrop-filter: brightness(102%);
+    }
 }
 
 .itemMenuText {
     position: relative;
     color: var(--white4);
     white-space: nowrap;
-    &:hover {
-        .underline {
-            width: 100%;
-        }
-    }
 }
 
 .sectionUnderline {
