finished slider, expanded MainPageGallery section, add theme for ui Text

--- a/client/src/app/styles/themes/normal.scss
+++ b/client/src/app/styles/themes/normal.scss
@@ -3,8 +3,8 @@
     --blue-light: #DAE7F2;
     --black: #292E33;
     --grey-light: #EFF1F2;
-    --dark: #293A47;
-    --dark2: #202e3a;
+    --dark: #23425C;
+    --dark2: #1C354A;
     --grey: #A6ADB2;
     --grey-light2: #DAE0E5;
     --grey2: #A1AAB2;
