--- a/client/src/shared/ui/Slider/DesktopView/Slider.module.scss
+++ b/client/src/shared/ui/Slider/DesktopView/Slider.module.scss
@@ -1,15 +1,20 @@
 .Slider {
     display: flex;
     flex-direction: column;
-    gap: 40px;
     width: 100%;
 }
 
-.imgWrapper {
+.imgWrapper2 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.imgWrapper1 {
     position: relative;
     width: 73vw;
-    height: 80vh;
-    overflow: hidden;
+    height: 100%;
 }
 
 .img {
@@ -30,22 +35,22 @@
 
 .cornerUpper {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -4px;
+    left: -4px;
     z-index: 1;
 }
 
 .cornerLower {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: -4px;
+    right: -4px;
 }
 
 .sliderWrapper {
     display: flex;
-    align-items: end;
     justify-content: space-between;
     width: 100%;
+    height: 80vh;
 }
 
 .arrowsWrapper {
