added ui button, expanded mainPageGallery section

--- a/client/src/shared/ui/Button/Button.module.scss
+++ b/client/src/shared/ui/Button/Button.module.scss
@@ -16,3 +16,47 @@
         opacity: 0.6;
     }
 }
+
+.primary {
+    color: var(--white4);
+    background: var(--blue);
+    border-radius: 20px;
+    padding-inline: 10px;
+    padding-block: 5px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+    border: 1px solid var(--blue);
+    .text {
+        z-index: 1;
+        transition: all 0.4s ease-in;
+    }
+    .animBg {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 101%;
+        background: var(--white4);
+        border-radius: 20px;
+        transition: all 0.4s ease-in;
+    }
+    .arrow {
+        fill: var(--white4);
+        z-index: 1;
+        transition: all 0.4s ease-in;
+    }
+    &:hover {
+        .animBg {
+            right: 0;
+        }
+        .text {
+            color: var(--blue);
+        }
+        border: 1px solid var(--blue);
+        .arrow {
+            fill: var(--blue);
+        }
+    }
+}
