added spinner, expanded mainPageNews

--- a/client/src/app/styles/themes/normal.scss
+++ b/client/src/app/styles/themes/normal.scss
@@ -6,6 +6,7 @@
     --dark: #23425C;
     --dark2: #1C354A;
     --grey: #A6ADB2;
+    --grey4: #dadfe6;
     --grey-light2: #DAE0E5;
     --grey2: #A1AAB2;
     --white2: #E6ECF2;
