--- a/client/src/app/styles/variables/global.scss
+++ b/client/src/app/styles/variables/global.scss
@@ -4,9 +4,9 @@
     // -------------------------------- DESKTOP FONTS -------------------------------------------------
 
     // NUMBERS
-    --font-size-numbers-desktop: 80px;
-    --font-line-numbers-desktop: 72px;
-    --font-numbers-desktop: 500 var(--font-size-numbers-desktop) / var(--font-line-numbers-desktop) var(--font-family-main);
+    --font-size-large-desktop: 80px;
+    --font-line-large-desktop: 72px;
+    --font-large-desktop: 500 var(--font-size-large-desktop) / var(--font-line-large-desktop) var(--font-family-main);
 
     // H1
     --font-size-h1-desktop: 60px;
