--- a/client/src/shared/ui/Text/Text.module.scss
+++ b/client/src/shared/ui/Text/Text.module.scss
@@ -22,8 +22,8 @@
 
 // desktop and mobile
 
-.numbers_desktop {
-    font: var(--font-numbers-desktop);
+.large_desktop {
+    font: var(--font-large-desktop);
 }
 
 .h1_desktop {
