--- a/client/src/shared/ui/Button/Button.module.scss
+++ b/client/src/shared/ui/Button/Button.module.scss
@@ -19,7 +19,7 @@
 
 .primary {
     color: var(--white4);
-    background: var(--blue);
+    background: var(--blue2);
     border-radius: 20px;
     padding-inline: 10px;
     padding-block: 5px;
@@ -27,7 +27,7 @@
     align-items: center;
     position: relative;
     gap: 10px;
-    border: 1px solid var(--blue);
+    border: 1px solid var(--blue2);
     .text {
         z-index: 1;
         transition: all 0.4s ease-in;
@@ -52,11 +52,11 @@
             right: 0;
         }
         .text {
-            color: var(--blue);
+            color: var(--blue2);
         }
-        border: 1px solid var(--blue);
+        border: 1px solid var(--blue2);
         .arrow {
-            fill: var(--blue);
+            fill: var(--blue2);
         }
     }
 }
