--- a/client/src/pages/MainPage/ui/DesktopView/MainPageNews/MainPageNews.module.scss
+++ b/client/src/pages/MainPage/ui/DesktopView/MainPageNews/MainPageNews.module.scss
@@ -1,6 +1,6 @@
 .titleWrapper {
     padding-bottom: 150px;
-    padding-top: 50px;
+    padding-top: 80px;
     border-bottom: 1px solid var(--grey4);
 }
 
@@ -8,6 +8,8 @@
     letter-spacing: 40px;
     position: relative;
     z-index: 1;
+    text-indent: -40px;
+    direction: rtl;
 }
 
 .title {
@@ -15,6 +17,6 @@
 }
 
 .spinner {
-    top: -112px;
-    left: -30px;
+    top: -155.5%;
+    left: -4.5%;
 }
