added mainPageSmall, icon theme blue. fix text wrap, sizes

--- a/client/src/app/styles/variables/global.scss
+++ b/client/src/app/styles/variables/global.scss
@@ -53,6 +53,11 @@
     --font-line-body-desktop: 22px;
     --font-body-desktop: 400 var(--font-size-body-desktop) / var(--font-line-body-desktop) var(--font-family-main);
 
+    // Body-MEDIUM
+    --font-size-body-medium-desktop: 20px;
+    --font-line-body-medium-desktop: 22px;
+    --font-body-medium-desktop: 500 var(--font-size-body-medium-desktop) / var(--font-line-body-medium-desktop) var(--font-family-main);
+
     // BodyS
     --font-size-body-s-desktop: 16px;
     --font-line-body-s-desktop: 19.2px;
