--- a/client/src/entities/News/ui/MainNews/DesktopView/MainNewsDesktop.module.scss
+++ b/client/src/entities/News/ui/MainNews/DesktopView/MainNewsDesktop.module.scss
@@ -1,6 +1,7 @@
 .MainNewsDesktop {
     border-radius: 10px;
-    width: 85%;
+    width: 100%;
+    height: 35vh;
     position: relative;
     overflow: hidden;
     cursor: pointer;
@@ -29,6 +30,14 @@
 
     .description {
         width: 90%;
+        -ms-hyphens: auto;
+        -moz-hyphens: auto;
+        -webkit-hyphens: auto;
+        hyphens: auto;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
     }
 }
 
