--- a/client/src/shared/ui/Icon/Icon.module.scss
+++ b/client/src/shared/ui/Icon/Icon.module.scss
@@ -9,3 +9,22 @@
         opacity: 0.6;
     }
 }
+
+.blue {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    background: var(--blue3);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.1s ease-in;
+    .svg {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    &:hover {
+        transform: scale(1.03);
+    }
+}
