started development of backend

--- a/client/src/app/styles/index.scss
+++ b/client/src/app/styles/index.scss
@@ -3,6 +3,10 @@
 @import "themes/normal";
 @import "themes/accessibility";
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     position: relative;
 }
