--- a/client/src/widgets/Footer/ui/DesktopView/FooterDesktop/FooterDesktop.module.scss
+++ b/client/src/widgets/Footer/ui/DesktopView/FooterDesktop/FooterDesktop.module.scss
@@ -1,3 +1,10 @@
 .FooterDesktop {
+    padding-inline: 50px;
+    background: var(--black);
+    min-height: 438px;
+    height: 60vh;
+}
 
+.rightBlocks {
+    flex-grow: 1;
 }
