--- a/client/src/entities/News/ui/MainNews/DesktopView/MainNewsDesktop.module.scss
+++ b/client/src/entities/News/ui/MainNews/DesktopView/MainNewsDesktop.module.scss
@@ -2,6 +2,7 @@
     border-radius: 10px;
     width: 100%;
     height: 35vh;
+    min-height: 255px;
     position: relative;
     overflow: hidden;
     cursor: pointer;
