--- a/client/src/entities/News/ui/SmallNews/DesktopView/SmallNewsDesktop.module.scss
+++ b/client/src/entities/News/ui/SmallNews/DesktopView/SmallNewsDesktop.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: 20px;
     height: 21vh;
+    min-height: 153px;
     width: 19%;
     cursor: pointer;
     transition: all 0.1s ease-in;
