--- a/client/src/shared/ui/AppLink/AppLink.module.scss
+++ b/client/src/shared/ui/AppLink/AppLink.module.scss
@@ -13,3 +13,12 @@
         opacity: 0.6;
     }
 }
+
+.grey {
+    color: var(--grey);
+    font: var(--font-body-s-desktop);
+    transition: opacity 0.2s ease-in;
+    &:hover {
+        opacity: 0.4;
+    }
+}
