--- a/client/src/shared/ui/Slider/DesktopView/Slider.module.scss
+++ b/client/src/shared/ui/Slider/DesktopView/Slider.module.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 80vh;
+    min-height: 584px;
 }
 
 .imgWrapper2 {
@@ -50,7 +52,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 80vh;
+    height: 100%;
 }
 
 .arrowsWrapper {
