--- a/client/src/widgets/Footer/ui/DesktopView/FooterMenuDesktop/FooterMenuDesktop.module.scss
+++ b/client/src/widgets/Footer/ui/DesktopView/FooterMenuDesktop/FooterMenuDesktop.module.scss
@@ -1,3 +1,10 @@
 .FooterMenuDesktop {
+    width: calc(100% / 3);
+    box-shadow: -1px 0 1px -1px var(--grey);
+    padding-block: 50px;
+    padding-left: 5px;
+}
 
+.link {
+    max-width: 70%;
 }
