--- a/client/src/shared/ui/Cover/DesktopView/CoverDesktop.module.scss
+++ b/client/src/shared/ui/Cover/DesktopView/CoverDesktop.module.scss
@@ -1,144 +1,214 @@
 .CoverDesktop {
+    width: 100%;
     position: relative;
     overflow: hidden;
-    width: 100%;
 }
-
-.bgImgWrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.entering {
-    animation: blink 0.5s linear;
-}
-
-.exiting {
-    animation: blink 0.5s linear;
-}
-
-.bgImgWrapper::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    backdrop-filter: blur(10px) brightness(20%);
-    animation: LighteningBg 1s ease-in forwards;
-    animation-delay: 0.5s;
-}
-
-.bgImgWrapper::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: var(--black-opacity);
-    z-index: 3;
-}
-
-.bgImg {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-
-.skew {
-    position: absolute;
-    width: 500px;
-    margin-left: auto;
-    top: 0;
-    bottom: 0;
-    right: 5%;
-    transform: skew(12deg);
-    box-shadow: 0 0 4px -2px var(--white4);
-}
-
-.skew::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    backdrop-filter: brightness(20%);
-    animation: Lightening 1s ease-in forwards;
-    animation-delay: 0.5s;
-}
-
-.skewImg {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 70% 200px;
-    animation: Insert 0.5s ease-in forwards;
-}
-
 
 .content {
     position: absolute;
-    z-index: 4;
     bottom: 70px;
+    left: 55px;
+    right: 55px;
+    z-index: 5;
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: opacity 0.5s;
+    z-index: 1;
+    opacity: 0;
+    will-change: opacity;
+}
+
+.activeSlide {
+    opacity: 1;
+    z-index: 2;
+}
+
+.slideBg {
+    position: absolute;
+    bottom: 0;
     left: 0;
     right: 0;
-    padding-inline: 55px;
+    top: 0;
+}
+
+.slideBg::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: var(--black-opacity);
+    backdrop-filter: blur(2px);
+}
+
+.slideBg img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 0;
+}
+
+.skew {
+    position: absolute;
+    width: 43vw;
+    height: 100%;
+    left: 32vw;
+    transform: skew(35deg);
+    transform-origin: left top;
+    overflow: hidden;
+}
+
+.skewOver {
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    right: -32vw;
+    overflow: hidden;
+    transform: skew(-35deg);
+    transform-origin: left top;
+    z-index: 3;
+}
+
+.imgWrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.imgWrapper::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: var(--black-opacity);
+}
+
+.imgWrapper img {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    min-height: 100%;
+    object-fit: cover;
+    object-position: 0;
+}
+
+.firstSlide {
+    .slideBg::after {
+        background: var(--black2);
+        animation: lightening 5s ease forwards;
+        will-change: background;
+    }
+
+    .skew::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        bottom: 0;
+        background: var(--black-opacity2);
+        left: 50%;
+        transform: translateX(-50%) scaleX(0.4);
+        animation: skew-to-big 1.5s 0.5s cubic-bezier(.23,1,.32,1) forwards;
+        will-change: transform;
+    }
+
+    .imgWrapper {
+        bottom: 0;
+        height: 0;
+        overflow: hidden;
+        animation: img-to-up 1.5s 1s cubic-bezier(.86,0,.07,1) forwards;
+        will-change: height;
+    }
+
+    .imgWrapper::after {
+        background: var(--black2);
+        animation: lightening 1.5s 1s ease forwards;
+        will-change: background;
+    }
+
+    .imgWrapper img {
+        object-position: 100px;
+        bottom: 0;
+        animation: img-to-left 1.5s 1s cubic-bezier(.86,0,.07,1) forwards;
+        will-change: object-position;
+    }
 }
 
 .small {
-    height: 155px;
+    height: 135px;
     .skew {
-        width: 300px;
-        right: 1%;
+        left: auto;
+        right: 7vw;
+    }
+    .imgWrapper img {
+        width: 100%;
+        min-height: 100%;
+        height: 30vh;
+    }
+
+    .firstSlide {
+        .imgWrapper {
+            animation: img-to-up2 1.5s 1s cubic-bezier(.86,0,.07,1) forwards;
+        }
     }
 }
 
 .large {
     height: 100vh;
+    min-height: 700px;
 }
 
-@keyframes Lightening {
+@keyframes lightening {
     from {
-        backdrop-filter: brightness(20%);
+        background: var(--black2);
     }
     to {
-        backdrop-filter: brightness(90%);
+        background: var(--black-opacity);
     }
 }
 
-@keyframes LighteningBg {
+@keyframes skew-to-big {
     from {
-        backdrop-filter: blur(10px) brightness(20%);
+        transform: translateX(-50%) scaleX(0.4);
     }
     to {
-        backdrop-filter: blur(10px) brightness(90%);
+        transform: translateX(-50%) scaleX(1);
     }
 }
 
-@keyframes Insert {
+
+@keyframes img-to-up {
     from {
-        object-position: 70% 200px;
+        height: 0;
     }
     to {
-        object-position: 85% 50%;
+        height: 100%;
     }
 }
 
-@keyframes blink {
-    0% {
-        filter: contrast(1);
+@keyframes img-to-up2 {
+    from {
+        height: 0;
     }
-    20% {
-        filter: contrast(0.6);
-    }
-    100% {
-        filter: contrast(1);
+    to {
+        height: 100%;
     }
 }
+
+@keyframes img-to-left {
+    from {
+        object-position: 100px;
+    }
+    to {
+        object-position: 0;
+    }
+}
+
