--- a/client/src/pages/MainPage/ui/DesktopView/MainPageBannerDesktop/MainPageBannerDesktop.module.scss
+++ b/client/src/pages/MainPage/ui/DesktopView/MainPageBannerDesktop/MainPageBannerDesktop.module.scss
@@ -1,12 +1,46 @@
+.instituteName {
+    width: 70%;
+    position: relative;
+    opacity: 0;
+    transform: translateY(50%);
+    animation: text-to-up1 1.5s 2s cubic-bezier(.23,1,.32,1) forwards;
+}
+
+.instituteNameLower {
+    position: relative;
+    opacity: 0;
+    transform: translateY(100%);
+    animation: text-to-up2 0.5s 2.5s ease-in-out forwards;
+}
 
 .youtubeIcon {
     margin-left: 5px;
 }
 
-.instituteName {
-    width: 70%;
-}
-
 .cover {
     min-height: 731px;
+}
+
+@keyframes text-to-up1 {
+    from {
+        opacity: 0;
+        transform: translateY(50%);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes text-to-up2 {
+    from {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
